user/logs/stride-200809_230445.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Cool Cat\Documents\GitHub\Toontown-Old-Online\toontown\toonbase\ToontownStart.py", line 175, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 47, in <module>
    import PlayGame
  File "toontown\distributed\PlayGame.py", line 19, in <module>
    from toontown.hood import SellbotHQ, CashbotHQ, LawbotHQ, BossbotHQ
  File "toontown\hood\SellbotHQ.py", line 1, in <module>
    from toontown.coghq.SellbotCogHQLoader import SellbotCogHQLoader
  File "toontown\coghq\SellbotCogHQLoader.py", line 14, in <module>
    import SellbotHQBossBattle
  File "toontown\coghq\SellbotHQBossBattle.py", line 3, in <module>
    from toontown.suit import DistributedSellbotBoss
  File "toontown\suit\DistributedSellbotBoss.py", line 15, in <module>
    import DistributedBossCog
  File "toontown\suit\DistributedBossCog.py", line 11, in <module>
    import BossCog
  File "toontown\suit\BossCog.py", line 90
    self.exclaim = loader.loadSfx('phase_9/audio/sfx/Boss_COG_VO_grunt.ogg')
    ^
IndentationError: unexpected indent
